--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang='en'>
 <head>
   <title>Learn GitHub</title>
 </head>
 <body>
-  <p>Just a throwaway index.html page.</p>
+	<h1>Here's my header</h1>
+	<p>Just a throwaway index.html page.</p>
 </body>
 </html>
